--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,34 +11,39 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css">
-
+        
+        <!-- Bootstrap Framework -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.css">
+		<script type="text/javascript" src="js/bootstrap.js"></script>
+		
     </head>
     <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
+		<div class="container-fluid">
+	        <div class="site">
+	          <div class="header ">
+	            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+	            <a class="extra" href="/">Project_01</a>
+	          </div><!-- End Header -->
+	
+	          {{ content }}
+	
+	          <div class="footer">
+	            <div class="contact">
+	              <p>
+	                Your Name<br />
+	                What You Are<br />
+	                you@example.com
+	              </p>
+	            </div>
+	            <div class="contact">
+	              <p>
+	                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
+	                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+	              </p>
+	            </div>
+	          </div><!-- End Footer -->
+	        </div><!-- End Site -->
+		</div><!-- End Bootstrap Container -->
     </body>
 </html>
