--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,5 +45,6 @@
 	          </div><!-- End Footer -->
 	        </div><!-- End Site -->
 		</div><!-- End Bootstrap Container -->
+		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     </body>
 </html>
