--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,32 @@
 layout: default
 title: Japheth Crawford - Blog
 ---
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{{ page.title }}</title>
+        <meta name="viewport" content="width=device-width">
+
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="css/syntax.css">
+
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="css/main.css">
+        
+        <!-- Bootstrap Framework -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.css">
+		<script type="text/javascript" src="js/bootstrap.js"></script>
+		
+    </head>
+    <body>
+		<div class="container-fluid">
+	        <div class="site">
+	          <div class="header ">
+	            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+	            <a class="extra" href="/">Project_01</a>
+	          </div><!-- End Header -->
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
