--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,15 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/main.css">
         
         <!-- Bootstrap Framework -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.css">
-		<script type="text/javascript" src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="{{ site.baseurl }}css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/bootstrap-theme.css">
+		<script type="text/javascript" src="{{ site.baseurl }}js/bootstrap.js"></script>
 		
     </head>
     <body>
