--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,12 @@ title: Japheth Crawford - Blog
     </head>
     <body>
 		<div class="container-fluid">
+		<div class="site">
+	          <div class="header ">
+	            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+	            <a class="extra" href="/">Project_01</a>
+	          </div><!-- End Header -->
+
 			<h2>{{ page.title }}</h2>
 			<p class="meta">{{ page.date | date_to_string }}</p>
 			
