--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<div class="container-fluid">
 	        <div class="site">
 	          <div class="header ">
-	            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+	            <h1 class="title"><a href="{{ site.url }}">{{ site.name }}</a></h1>
 	            <a class="extra" href="/">Project_01</a>
 	          </div><!-- End Header -->
 	
