fix posts header links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,8 @@ title: Japheth Crawford – Posts
 		<div class="container-fluid">
 		<div class="site">
 	          <div class="header ">
-	            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-	            <a class="extra" href="/">Project_01</a>
+	            <h1 class="title"><a href="{{ site.url }}">{{ site.name }}</a></h1>
+	            <a class="extra" href="#">Project_01</a>
 	          </div><!-- End Header -->
 
 			<h2>{{ page.title }}</h2>
