--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ title: Posts
 	            <a class="extra" href="#">Project_01</a>
 	          </div><!-- End Header -->
 
-			<h2>{{ post.title }}</h2>
+			<h2>{{ article.title }}</h2>
 			
 			<p class="meta">{{ page.date | date_to_string }}</p>
 			
