update contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
 	            </div>
 	            <div class="contact">
 	              <p>
-	                <a href="https://github.com/japhethcrawford">github.com/yourusername</a><br />
-	                <a href="https://twitter.com/japhethcrawford">twitter.com/yourusername</a><br />
+	                <a href="https://github.com/japhethcrawford">github</a><br />
+	                <a href="https://twitter.com/japhethcrawford">twitter</a><br />
 	              </p>
 	            </div>
 	          </div><!-- End Footer -->
