--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	        <div class="site">
 	          <div class="header ">
 	            <h1 class="title"><a href="{{ site.url }}">{{ site.name }}</a></h1>
-	            <a class="extra" href="/">Project_01</a>
+	            <a class="extra" href="{{ site.url }}/proj1.html">Project_01</a>
 	          </div><!-- End Header -->
 	
 	          {{ content }}
