Fix project links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
 	        <div class="site">
 	          <div class="header ">
 	            <h1 class="title"><a href="{{ site.url }}">{{ site.name }}</a></h1>
-	            <a class="extra" href="{{ site.url }}/proj1">Project_01</a>
-	            <a class="extra" href="{{ site.url }}/proj2">Project_02</a>
+	            <a class="extra" href="japhethcrawford.github.io/proj1">Project_01</a>
+	            <a class="extra" href="japhethcrawford.github.io/proj2">Project_02</a>
 
 	          </div><!-- End Header -->
 	
