--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,8 @@ title: Posts
 		<div class="site">
 	          <div class="header ">
 	            <h1 class="title"><a href="{{ site.url }}">{{ site.name }}</a></h1>
-	            <a class="extra" href="{{ site.url }}/proj1.html">Project_01</a>
+	            <a class="extra" href="http://japhethcrawford.github.io/proj1.html">Project_01</a>
+	            <a class="extra" href="http://japhethcrawford.github.io/proj2.html">Project_02</a>
 	          </div><!-- End Header -->
 
 			<h2>{{ article.title }}</h2>
