--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,7 @@
 		</div><!-- End Bootstrap Container -->
 		
 		<script src="{{ site.url }}/js/bootstrap.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
     </body>
 </html>
