--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
         <!-- Bootstrap Framework -->
         <link rel="stylesheet" href="{{ site.url }}/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ site.url }}/css/bootstrap-theme.css">
-		<script type="text/javascript" src="{{ site.url }}/js/bootstrap.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="{{ site.url }}/js/bootstrap.min.js"></script>
+
 		
 		<!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.url }}/css/main.css">
@@ -67,8 +69,6 @@
 	        </div><!-- End Site -->
 		</div><!-- End Bootstrap Container -->
 		
-		<script src="{{ site.url }}/js/bootstrap.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
     </body>
 </html>
