--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		
     </head>
     <body>
-		<div class="container-fluid">
+		<div class="container-fluid" style="text-align: center;">
 	        <div class="site">
 	          <div class="header row">
 	            <h1 class="title col-md-3"><a href="{{ site.url }}">{{ site.name }}</a></h1>
@@ -45,11 +45,11 @@
 				  </ul>
 				  </div>
 				  <div style="padding-top: 2%;" class="col-md-3 col-sm-6 dropdown">
-				  <a data-toggle="dropdown" href="#">Project One - Enoch Pratt</a>
+				  <a data-toggle="dropdown" href="#">Project Two - Video Analytics API</a>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 					{% assign count = 0 %}
 					{% for post in site.posts %}
-					  {% if post.tags contains 'Project 1' %}
+					  {% if post.tags contains 'Project 2' %}
 					    {% if count < 20 %}
 					      {% assign count = count|plus:1 %}
 					      <div class="post_info">
@@ -63,8 +63,10 @@
 					{% endfor %}
 				  </ul>
 		   </div>
-	            <a class="extra" href="http://japhethcrawford.github.io/proj1">Project_01</a>
-	            <a class="extra" href="http://japhethcrawford.github.io/proj2">Project_02</a>
+	  <!--
+          <a class="extra" href="http://japhethcrawford.github.io/proj1">Project_01</a>
+	            <a class="extra" href="http://japhethcrawford.github.io/proj2">Project_02</a
+-->
 
 	          </div><!-- End Header -->
 	
