--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,12 @@
 					    {% endif %}
 					  {% endif %}
 					{% endfor %}
-					<li>
-						<a class="postList" href="http://japhethcrawford.github.io/proj1"><strong><h3 style="color: #2b7df7;">Finished Project</h3></strong></a>
-					</li>
+					<div class="post_info">
+						<li>
+							<a class="postList" href="http://japhethcrawford.github.io/proj1">
+							<strong><h1 style="font-size: 150%; color: #2b7df7;">Finished Project</h1></strong></a>
+						</li>
+					</div>
 				  </ul>
 				  </div>
 				  <div style="padding-top: 2%;" class="col-md-6 col-sm-6 dropdown">
@@ -64,9 +67,12 @@
 					    {% endif %}
 					  {% endif %}
 					{% endfor %}
-					<div class="post_info"><li>
-						<a class="postList" href="http://japhethcrawford.github.io/proj2"><strong><h1 style="font-size: 130%; color: #2b7df7;">Finished Project</h1></strong></a>
-					</li></div>
+					<div class="post_info">
+						<li>
+							<a class="postList" href="http://japhethcrawford.github.io/proj2">
+							<strong><h1 style="font-size: 150%; color: #2b7df7;">Finished Project</h1></strong></a>
+						</li>
+					</div>
 				  </ul>
 		   </div>
 	  <!--
