--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,14 +11,16 @@ title: Posts
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.url }}/css/main.css">
         
         <!-- Bootstrap Framework -->
         <link rel="stylesheet" href="{{ site.url }}/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ site.url }}/css/bootstrap-theme.css">
-		<script type="text/javascript" src="{{ site.url }}/js/bootstrap.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="{{ site.url }}/js/bootstrap.min.js"></script>
+
+		
+		<!-- Custom CSS -->
+        <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 		
     </head>
     <body>
