--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,9 +76,8 @@ title: Posts
 						</li>
 					</div>
 				  </ul>
-		   </div>	            <a class="extra" href="http://japhethcrawford.github.io/proj1">Project_01</a>
-	            <a class="extra" href="http://japhethcrawford.github.io/proj2">Project_02</a>
-	          </div><!-- End Header -->
+		   </div>	         
+	         <!-- End Header -->
 
 			<h2>{{ article.title }}</h2>
 			
