--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,10 @@ title: Posts
     <body>
 		<div class="container-fluid">
 		<div class="site">
-	          <div class="header ">
-<div style="padding-top: 2%;" class="col-md-12 col-sm-6 dropdown">
+	          <div class="header row">
+	          	<h1 class="title col-md-12"><a href="{{ site.url }}">{{ site.name }}</a></h1>
+
+				<div style="padding-top: 2%;" class="col-md-12 col-sm-6 dropdown">
 				  <a data-toggle="dropdown" href="#">Project One - Enoch Pratt</a>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 					{% assign count = 0 %}
