--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,7 +81,7 @@ title: Posts
 		   </div>	         
 	         <!-- End Header -->
 
-			<h1>{{ article.title }}</h1>
+			<h1 style="padding-top: 10%;">{{ article.title }}</h1>
 			
 			<p class="meta">{{ page.date | date_to_string }}</p>
 			
